--- a/css/style.css
+++ b/css/style.css
@@ -41,20 +41,16 @@ body {
 
 .custom-nav {
     background-color: var(--header-footer-bg);
-    /* Fond noir */
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-    /* Ombre légère */
 }
 
 .custom-nav .nav-link.active {
     background-color: #343a40;
-    /* Couleur différente pour l’onglet actif */
     color: #ffffff;
 }
 
 .custom-nav .nav-link {
     color: #ffffff;
-    /* Texte en blanc */
 }
 
 h1,
@@ -84,6 +80,12 @@ header h1 {
 }
 
 a:hover {
+    color: var(--hover-link-color);
+
+}
+
+header a:hover {
+    background-color: #444444;
     color: var(--hover-link-color);
 }
 
