--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ li a {
 
 
 body {
+    cursor: url('../img/mode-sombre.png') 16 16, auto;
     font-family: Arial, sans-serif;
     background-color: var(--background-color);
     color: var(--text-color);
