--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,8 @@ body {
     color: #ffffff;
 }
 
+
+
 h1,
 h2 {
     color: var(--text-color);
@@ -122,6 +124,7 @@ header {
 
 .list-group {
     background-color: #e2e8f0;
+    border-radius: 10px;
 
 }
 
